ci-cd/k8s/frontend-pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: frontend
  labels:
    app: fe
spec: 
  containers:
    - name: frontend
      image: ghcr.io/edelbitter/timetracking-fe:v3.3
      ports:
        - containerPort: 80
