ci-cd/k8s/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-nodeport
spec:
  type: NodePort
  selector: 
    app: fe
  ports:
    - port: 8080
      targetPort: 80
      nodePort: 30000
